What's New in Python 2.2.2?
Release date: dd-mmm-2002
===========================

Core and builtins

- Source that creates parse nodes with an extremely large number of
  children (e.g.,  test_longexp.py) triggers problems with the
  platform realloc() under several platforms (e.g., MacPython, and
  Win98).  This has been fixed via a more-aggressive overallocation
  strategy.

- Fixed a bug with a continue inside a try block and a yield in the
  finally clause.  [SF bug 567538]

- Cycles going through the __class__ link of a new-style instance are
  now detected by the garbage collector.

- Classes using __slots__ are now properly garbage collected.
  [SF bug 519621]

- Repaired a slow memory leak possible only in programs creating a
  great many cyclic structures involving frames.  Reported on
  SourceForge as bug 543148.

- A method zfill() was added to str and unicode, that fills a numeric
  string to the left with zeros.  For example,
  "+123".zfill(6) -> "+00123".

- Complex numbers supported divmod() and the // and % operators, but
  these make no sense.  Since this was documented, they're being
  deprecated now.

- String methods lstrip(), rstrip() and strip() now take an optional
  argument that specifies the characters to strip.  For example,
  "Foo!!!?!?!?".rstrip("?!") -> "Foo". In addition, "200L".strip("L")
  will return "200". This is useful for replacing code that assumed
  longs will always be printed with a trailing "L".

Library

- Some fixes in the copy module: when an object is copied through its
  __reduce__ method, there was no check for a __setstate__ method on
  the result [SF patch 565085]; deepcopy should treat instances of
  custom metaclasses the same way it treats instances of type 'type'
  [SF patch 560794].

Build

- A bug was fixed that could cause COUNT_ALLOCS builds to segfault, or
  get into infinite loops, when a new-style class got garbage-collected.
  Unfortunately, to avoid this, the way COUNT_ALLOCS works requires